2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-single.c: (ephy_embed_single_iface_init):
	* embed/mozilla/mozilla-embed-single.cpp:

	Make "network-status" property readwrite.

2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-single.c: (ephy_embed_single_iface_init):
	* lib/egg/eggstatusicon.c: (egg_status_icon_class_init):
	* lib/egg/eggtrayicon.c: (egg_tray_icon_class_init):
	* lib/widgets/ephy-location-entry.c:
	(ephy_location_entry_class_init):
	* src/bookmarks/ephy-bookmark-action.c:
	(ephy_bookmark_action_class_init):
	* src/bookmarks/ephy-topic-action.c:
	(ephy_topic_action_class_init):
	* src/ephy-find-toolbar.c: (ephy_find_toolbar_class_init):
	* src/ephy-fullscreen-popup.c: (ephy_fullscreen_popup_class_init):
	* src/ephy-location-action.c: (ephy_location_action_class_init):
	* src/ephy-python-extension.c: (ephy_python_extension_class_init):
	* src/ephy-session.c: (ephy_session_class_init):
	* src/ephy-tab.c: (ephy_tab_class_init):
	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_class_init):
	* src/ephy-toolbar.c: (ephy_toolbar_class_init):
	* src/ppview-toolbar.c: (ppview_toolbar_class_init):

	More static strings.

2005-11-08  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed-dialog.c: (ephy_embed_dialog_class_init):
	* embed/ephy-embed-persist.c: (ephy_embed_persist_class_init):
	* embed/ephy-history.c: (ephy_history_class_init):
	* embed/mozilla/mozilla-download.cpp:
	* lib/egg/egg-editable-toolbar.c:
	(egg_editable_toolbar_class_init):
	* lib/egg/egg-toolbar-editor.c: (egg_toolbar_editor_class_init):
	* lib/egg/eggstatusicon.c: (egg_status_icon_class_init):
	* lib/egg/eggtraymanager.c: (egg_tray_manager_class_init):
	* lib/ephy-dialog.c: (ephy_dialog_class_init):
	* lib/ephy-file-chooser.c: (ephy_file_chooser_class_init):
	* lib/ephy-node-db.c: (ephy_node_db_class_init):
	* lib/widgets/ephy-node-view.c: (ephy_node_view_class_init):
	* lib/widgets/ephy-tree-model-node.c: