@@ -36,6 +36,7 @@
 #define _(x) x
 #define N_(x) x
 #endif
+#define P_(x) x
 
 #define SYSTEM_TRAY_REQUEST_DOCK    0
 #define SYSTEM_TRAY_BEGIN_MESSAGE   1
@@ -117,8 +118,8 @@ egg_tray_icon_class_init (EggTrayIconClass *klass)
   g_object_class_install_property (gobject_class,
 				   PROP_ORIENTATION,
 				   g_param_spec_enum ("orientation",
-						      _("Orientation"),
-						      _("The orientation of the tray."),
+						      P_("Orientation"),
+						      P_("The orientation of the tray."),
 						      GTK_TYPE_ORIENTATION,
 						      GTK_ORIENTATION_HORIZONTAL,
 						      G_PARAM_READABLE | G_PARAM_STATIC_NAME | G_PARAM_STATIC_NICK | G_PARAM_STATIC_BLURB));
