@@ -1,5 +1,13 @@
 2005-11-08  Christian Persch  <chpe@cvs.gnome.org>
 
+	* lib/egg/eggstatusicon.c: (egg_status_icon_class_init):
+	* lib/egg/eggtrayicon.c: (egg_tray_icon_class_init):
+	* lib/egg/eggtraymanager.c: (egg_tray_manager_class_init):
+
+	Don't translate param spec strings.
+
+2005-11-08  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/ephy-embed-single.c: (ephy_embed_single_iface_init):
 	* embed/mozilla/mozilla-embed-single.cpp:
 
